# fastsql-project-setup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_SETUP.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: README.md  code-review-guidelines.md  docs-update-rules.md  git-workflow-rules.md  release-process.md  testing-standards.md
docs/: changelog.md  contributing.md  index.md
docs/configuration/: database.md  overview.md
docs/getting-started/: first-project.md  installation.md  quickstart.md
src/fastapi_smith/: __init__.py  cli.py  config.py  generator.py  prompts.py
src/fastapi_smith/templates/: docker-compose.yml.j2  env.example.j2  pyproject.toml.j2
src/fastapi_smith/templates/app/: config.py.j2  database.py.j2  main.py.j2
src/fastapi_smith/templates/app/admin/: views.py.j2
src/fastapi_smith/templates/app/core/: cache.py.j2  health.py.j2
src/fastapi_smith/templates/app/routes/: auth.py.j2  users.py.j2
src/fastapi_smith/templates/app/services/: email.py.j2  fcm.py.j2  s3.py.j2  ses.py.j2
src/fastapi_smith/templates/github/: ci.yml.j2
src/fastapi_smith/templates/migrations/: env.py.j2
src/fastapi_smith/templates/tests/: conftest.py.j2
src/setup_fastsql/: __init__.py  cli.py  generator.py  prompts.py
src/setup_fastsql/templates/app/admin/: views.py.j2
tests/: __init__.py  test_cli.py  test_config.py  test_generator.py
(+4 files in other folders)
