[project]
name = "setup-fastsql"
version = "0.1.0"
description = "Interactive CLI to scaffold FastAPI projects with database, auth, admin, and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["fastapi", "scaffold", "cli", "sqlalchemy", "admin", "boilerplate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
]

[project.scripts]
setup-fastsql = "setup_fastsql.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/setup-fastsql"
Repository = "https://github.com/yourusername/setup-fastsql"
Documentation = "https://github.com/yourusername/setup-fastsql#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setup_fastsql"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
